# no_engine_game

./: .gitignore  CMakeLists.txt  Makefile  README.md  notebook.md  vcpkg.json
glad/include/glad/: glad.h
glad/src/: glad.c
notebook/: notebook.md
src/: main.cpp  shader_program.cpp
src/app/first/: CMakeLists.txt  fragment_shader.frag  main.cpp
src/lib/: CMakeLists.txt  shader_program.cpp  stb_impl.cpp  texture.cpp
src/lib/include/: error.h  shader_program.h  texture.h
